sass/components/navigation.scss
.navigation {
  position: relative;
  z-index: 90;
  width: 100%;
  height: 66px;
  background-color: $menu-bg-over-color;
  width: 100%;


  @media (min-width: $screen-md) {
    height: 110px;
  }

  &__wrap {
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 100%;
    width: $screen-sm;
    margin: 0 auto;

    @media (min-width: $screen-md) {
      width: $screen-md;
      height: 110px;
    }

    @media (min-width: $screen-lg) {
      // outline: 3px dotted cyan;
      width: $screen-lg;
      justify-content: flex-start;

    }
  }

  &__list {
    display: none;
    z-index: -1;
    position: absolute;
    top: 0;
    left: 0;
    margin: 0;
    padding: 0;
    padding-top: 66px;
    list-style: none;
    background-color: $menu-bg-color;
    line-height: 20px;
    width: 100%;


    @media (min-width: $screen-md) {
      padding-top: 110px;
    }

    @media (min-width: $screen-lg) {
      z-index: auto;
      position: absolute;
      top: auto;
      right: 0;
      margin: 0;
      align-self: flex-end;
      display: flex;
      justify-content: flex-end;
      position: absolute;
      padding-top: 0px;
      padding-right: 0px;
      background-color: transparent;
    }
  }

  &__list--js-visible {
    display: block;
  }

  &__item {
    display: block;
    height: 65px;
    border-top: 1px solid rgba(255, 255, 255, 0.15);
    border-bottom: 1px solid #000;
    text-align: center;

    @media (min-width: $screen-lg) {
      display: inline;
      vertical-align: middle;
      margin-left: 48px;
      padding: 33px 10px;
      border-top: 1px solid transparent;
      border-bottom: 1px solid transparent;
      height: 110px;

    }
  }



  &__link {
    display: block;
    color: $text-menu-color;
    text-transform: uppercase;
    font-weight: bold;
    line-height: 60px;
    font-size: $html-size-menu;

    &:hover {
      color: $accent-color;
    }

    &:active {
      opacity: 0.3;
    }

    @media (min-width: $screen-lg) {
      line-height: 18px;
      font-size: 18px;
      font-weight: normal;
      text-transform: none;
      padding: 10px 0px;

      &:hover {
        color: inherit;
        border-bottom: 2px solid white;
      }

      &:active {
        opacity: 0.3;
        border-bottom: 2px solid transparent;
      }

    }
  }

  &__logo-wrap {
    z-index: 10;
    margin-left: 20px;

    @media (min-width: $screen-lg) {
      margin-left: 10px;
    }
  }

  &__hamburger-wrap {
    position: relative;
    margin-right: 20px;
    height: 24px;
    width: 50px;
    cursor: pointer;

    .hamburger-item {
      fill: $text-menu-color;
    }

    &:hover {
      .hamburger-item {
        fill: $accent-color;
      }
    }

    &:active {
      opacity: 0.3;
    }

    @media (min-width: $screen-lg) {
      display: none;
    }
  }

  &__hamburger-icon {
    position: absolute;

    &--open {
      width: 50px;
      height: 24px;
    }

    &--close {
      display: none;
      right: 0;
      height: 24px;
      width: 24px;
    }
  }


  .js-toggle-hamburger-icons {
    .navigation__hamburger-icon--open {
      display: none;
    }

    .navigation__hamburger-icon--close {
      display: block;
    }
  }
}

